--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <img src="img/profile.jpg" alt="Picture" style="width:100%">
         <h1>Jairo Garcia</h1>
-        <p class="title">Year Level and Section</p>
+        <p class="title">BSIT3-A</p>
         <p>Your School</p>
         <div style="margin: 24px 0;">
             <a href="#"><i class="fa fa-facebook"></i></a>
