--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="card">
-        <img src="img/profile.jpg" alt="Picture" style="width:100%">
+        <img src="img/lamb.jpg" alt="Picture" style="width:100%">
         <h1>Jairo Garcia</h1>
         <p class="title">BSIT3-A</p>
         <p>Centro Escolar University</p>
