--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="title">BSIT3-A</p>
         <p>Centro Escolar University</p>
         <div style="margin: 24px 0;">
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100074717904046"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-x-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
