--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://www.facebook.com/profile.php?id=100074717904046"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-x-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jairo-garcia-5a1ab8249/"><i class="fa fa-linkedin"></i></a>
         </div>
         <p><button>Contact</button></p>
     </div>
